# libmrhvt

./: .gitignore  AUTHORS.txt  CMakeLists.txt  LICENSE.txt  README.md  README.txt  TODO.txt  VERSION.txt
doc/source/: conf.py  index.rst
doc/source/Building/: Building.rst
doc/source/Classes/: Classes.rst
doc/source/Classes/libmrhvt_Directory/: MRH_VTException.rst
doc/source/Classes/libmrhvt_Directory/Input/: MRH_InputTrigger.rst  MRH_Trigger.rst
doc/source/Classes/libmrhvt_Directory/Output/: MRH_OutputGenerator.rst  MRH_Placement.rst  MRH_Sentence.rst  MRH_Word.rst
doc/source/Classes/libmrhvt_Directory/String/: MRH_SpeechString.rst
doc/source/Classes/libmrhvt_Directory/String/Clean/: MRH_CleanSet.rst
doc/source/Enumerations/: Enumerations.rst
doc/source/Enumerations/libmrhvt_Directory/Input/MRH_InputTrigger/: TriggerCompareMethod.rst
doc/source/Enumerations/libmrhvt_Directory/String/MRH_SpeechString/: State.rst
doc/source/Files/: Files.rst
doc/source/Files/CleanSetFile/: CleanSetExample.txt  CleanSetFile.rst
doc/source/Files/InputTriggerFile/: InputExample.txt  InputTriggerFile.rst
doc/source/Files/OutputGeneratorFile/: OutputExample.txt  OutputGeneratorFile.rst
doc/source/Functions/: Functions.rst
doc/source/Functions/_Internal/libmrhvt_Directory/Input/MRH_InputTrigger/: SearchTrigger.rst  SetupFile.rst
doc/source/Functions/_Internal/libmrhvt_Directory/Log/Input/: Input_0.rst
doc/source/Functions/_Internal/libmrhvt_Directory/Log/Output/: Output_0.rst
doc/source/Functions/_Internal/libmrhvt_Directory/Output/MRH_OutputGenerator/: RandomSentence.rst  RandomWord.rst  SelectElement.rst  SetupFile.rst
doc/source/Functions/libmrhvt_Directory/Input/MRH_InputTrigger/: AddTrigger.rst  ClearTriggers.rst  Evaluate.rst  GetCompareMethod.rst  GetLSSimilarity.rst  GetTriggerCount.rst  GetTrigger_0.rst  GetTrigger_1.rst  GetTriggers.rst  MRH_InputTrigger_0.rst  MRH_InputTrigger_1.rst  RemoveTrigger.rst  SetCompareMethod.rst  SetLSSimilarity.rst  ~MRH_InputTrigger.rst
doc/source/Functions/libmrhvt_Directory/Input/MRH_Trigger/: GetString.rst  GetValue.rst  GetWeight.rst  MRH_Trigger_0.rst  MRH_Trigger_1.rst  SetString.rst  SetValue.rst  SetWeight.rst  ~MRH_Trigger.rst
doc/source/Functions/libmrhvt_Directory/MRH_VTException/: MRH_VTException_0.rst  MRH_VTException_1.rst  what.rst  what2.rst  ~MRH_VTException.rst
doc/source/Functions/libmrhvt_Directory/MRH_VTRevision/: MRH_GetLibraryVersionMajor.rst  MRH_GetLibraryVersionMinor.rst  MRH_GetLibraryVersionPatch.rst
doc/source/Functions/libmrhvt_Directory/Output/MRH_OutputGenerator/: AddPlacement.rst  AddSentence.rst  AddWord.rst  ClearPlacements.rst  ClearSentences.rst  ClearWords.rst  Generate.rst  GetPlacementCount.rst  GetPlacement_0.rst  GetPlacement_1.rst  GetPlacements.rst  GetSentenceCount.rst  GetSentence_0.rst  GetSentence_1.rst  GetSentences.rst  GetWordCount.rst  GetWord_0.rst  GetWord_1.rst  GetWords.rst  MRH_OutputGenerator_0.rst  MRH_OutputGenerator_1.rst  RemovePlacement.rst  RemoveSentence.rst  RemoveWord.rst  ~MRH_OutputGenerator.rst
doc/source/Functions/libmrhvt_Directory/Output/MRH_Placement/: GetGroupID.rst  GetString.rst  MRH_Placement_0.rst  SetGroupID.rst  SetString.rst  ~MRH_Placement.rst
doc/source/Functions/libmrhvt_Directory/Output/MRH_Sentence/: GetString.rst  GetUseChance.rst  MRH_Sentence_0.rst  SetString.rst  SetUseChance.rst  ~MRH_Sentence.rst
doc/source/Functions/libmrhvt_Directory/Output/MRH_Word/: GetGroupID.rst  GetString.rst  GetUseChance.rst  MRH_Word_0.rst  SetString.rst  SetUseChance.rst  ~MRH_Word.rst
doc/source/Functions/libmrhvt_Directory/String/Clean/MRH_CleanSet/: Add.rst  GetString.rst  GetStringCount.rst  GetStringExists.rst  MRH_CleanSet_0.rst  MRH_CleanSet_1.rst  Remove_0.rst  Remove_1.rst  SetString.rst  ~MRH_CleanSet.rst
doc/source/Functions/libmrhvt_Directory/String/MRH_LocalisedPath/: GetPath.rst  GetPathDefault.rst
doc/source/Functions/libmrhvt_Directory/String/MRH_SpeechString/: Add.rst  GetID.rst  GetState.rst  GetString.rst  MRH_SpeechString_0.rst  MRH_SpeechString_1.rst  Reset_0.rst  Reset_1.rst  SplitString.rst  ~MRH_SpeechString.rst
doc/source/Functions/libmrhvt_Directory/String/MRH_StringClean/: Clean.rst
doc/source/Functions/libmrhvt_Directory/String/MRH_StringConvert/: ToLower.rst  ToUpper.rst
doc/source/Macros/: Macros.rst
doc/source/Macros/_Internal/libmrhvt_Directory/Log/MRH_ConversationLog/: MRH_CONVERSATION_LOG_SIZE_MAX.rst
doc/source/Macros/libmrhvt_Directory/MRH_VTRevision/: MRH_VOICE_TOOLS_LIB_VERSION_MAJOR.rst  MRH_VOICE_TOOLS_LIB_VERSION_MINOR.rst  MRH_VOICE_TOOLS_LIB_VERSION_PATCH.rst
doc/source/Namespaces/: Namespaces.rst
doc/source/Namespaces/libmrhvt_Directory/: MRH_VoiceToolsRevision.rst
doc/source/Namespaces/libmrhvt_Directory/String/: MRH_LocalisedPath.rst  MRH_StringClean.rst  MRH_StringConvert.rst
doc/source/Namespaces/libmrhvt_Directory/String/Compare/: MRH_StringCompareDC.rst  MRH_StringCompareLS.rst
doc/source/Structs/: Structs.rst
doc/source/Structs/_Internal/libmrhvt_Directory/Log/: Input.rst  Output.rst
include/libmrhvt/: libmrhvt.h
include/libmrhvt/libmrhvt/: MRH_VTException.h  MRH_VTRevision.h
include/libmrhvt/libmrhvt/Input/: MRH_InputTrigger.h  MRH_Trigger.h
include/libmrhvt/libmrhvt/Output/: MRH_OutputGenerator.h  MRH_Placement.h  MRH_Sentence.h  MRH_Word.h
include/libmrhvt/libmrhvt/String/: MRH_Clean.h  MRH_Compare.h  MRH_Convert.h  MRH_LocalisedPath.h  MRH_SpeechString.h
include/libmrhvt/libmrhvt/String/Clean/: MRH_CleanSet.h
include/libmrhvt/libmrhvt/String/Compare/: MRH_DefaultCompare.h  MRH_Levenshtein.h
lib/: MRH_BuildInfo.txt
src/libmrhvt/: MRH_VTRevision.cpp
src/libmrhvt/Input/: MRH_InputTrigger.cpp  MRH_Trigger.cpp
src/libmrhvt/Output/: MRH_OutputGenerator.cpp  MRH_Placement.cpp  MRH_Sentence.cpp  MRH_Word.cpp
src/libmrhvt/String/: MRH_Clean.cpp  MRH_Convert.cpp  MRH_LocalisedPath.cpp  MRH_SpeechString.cpp
src/libmrhvt/String/Clean/: MRH_CleanSet.cpp
src/libmrhvt/String/Compare/: MRH_DefaultCompare.cpp  MRH_Levenshtein.cpp
(+7 files in other folders)
